[FIX] Perfiles
Se modifan los permisos para los diferentes tipos de usuarios y roles
